--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,4 +14,13 @@ jobs:
 
       - name: Echo
         run: echo "Hello World!"
-
+      
+      - name: Comment
+        uses: actions/github-script@0.9.0
+        script: |
+          github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: "Hello World!"
+          })
