--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Echo
-        run: echo "Hello World!"
+      - name: Ls
+        run: ls -la > output.log
       
       - name: Comment
         uses: actions/github-script@0.9.0
@@ -26,5 +26,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "`echo Hello World!`"
+              body: $(cat output.log)
             })
