--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -3,10 +3,6 @@ name: Create pull request
 # プルリクが作成された時に実行する
 on:
   pull_request:
-    types: [
-      opened,
-      edited
-    ]
 
 jobs:
   build:
@@ -16,15 +12,22 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Ls
+        id: command
         run: ls -la > output.log
       
       - name: Comment
-        uses: actions/github-script@0.9.0
+        uses: actions/github-script@v3
+        env:
+          MESSAGE: |
+            # 実行結果を表示します
+            ```
+            ${{ steps.command.outputs }}
+            ```
         with:
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "$(cat output.log)"
+              body: process.env.MESSAGE
             })
