fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -19,7 +19,12 @@ jobs:
         uses: actions/github-script@v3
         env:
           MESSAGE: |
-            # 実行結果を表示します
+            ### 実行結果を表示します
+            #### 実行コマンド
+            ```
+            ${{ steps.command.outputs.command-name }} ${{ steps.command.outputs.command-arguments }}
+            ```
+            #### 実行結果
             ```
             ${{ steps.command.outputs }}
             ```
