fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Ls
         id: command
-        run: ls -la
+        run: echo "hello world!"
       
       - name: Comment
         uses: actions/github-script@v3
