--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -11,20 +11,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Ls
+      - name: Command
         id: command
         run: |
-          curl https://checkip.amazonaws.com
+          echo "aaaaaaaaaaaaaaaaaaaaaaaaaaaa"
       
       - name: Comment
         uses: actions/github-script@v3
         env:
-          MESSAGE: ${{ steps.command.outputs.result }}
+          MESSAGE: |
+            ### 実行結果
+            ```
+            ${{ steps.command.outputs.result }}
+            ```
         with:
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: process.env.MESSAGE + " "
+              body: process.env.MESSAGE
             })
