--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Command
         id: command
         run: |
-          echo "aaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+          cat README.md
       
       - name: Comment
         uses: actions/github-script@v3
