--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.command.outputs.test }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,7 +24,7 @@ jobs:
           MESSAGE: |
             ### 実行結果
             ```
-            ${{steps.command.outputs.result}}
+            ${{ needs.build.outputs.output1 }}
             ```
         with:
           script: |
