fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       output1: ${{ steps.command.outputs }}
+    needs: output1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
