--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Command
-        id: command
+        id: test
         run: |
           cat README.md
       
@@ -24,7 +24,7 @@ jobs:
           MESSAGE: |
             ### 実行結果
             ```
-            ${{ outputs.output1 }}
+            ${{ steps.test.outputs.test }}
             ```
         with:
           script: |
