--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -26,9 +26,9 @@ jobs:
             ```
         with:
           script: |
-            github.issues.createComment(
+            github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: $process.env.MESSAGE
-            )
+            })
