fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -22,7 +22,7 @@ jobs:
           MESSAGE: |
             ### 実行結果
             ```
-            ${{ steps.test.outputs.test }}
+            ${{ steps.test.outputs.text }}
             ```
         with:
           script: |
