--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Comment
         uses: actions/github-script@v3
         env:
-          MESSAGE: ${{ steps.test.outputs }}
+          MESSAGE: ${{ process.test.outputs }}
         with:
           script: |
             github.issues.createComment({
