--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Command
-        id: "test"
+        id: test
         run: echo "AAAAAAAAAAAAAAAAAAAAA"
       
       - name: Comment
