fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -13,12 +13,14 @@ jobs:
 
       - name: Command
         id: test
-        run: echo "AAAAAAAAAAAAAAAAAAAAA"
+        run: | 
+          echo "AAAAAAAAAAAAAAAAAAAAA"
       
       - name: Comment
         uses: actions/github-script@v3
         env:
-          MESSAGE: ${{ steps.test.outputs }}
+          MESSAGE: |
+            ${{ steps.test.outputs.result }}
         with:
           script: |
             github.issues.createComment({
