--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/github-script@v3
         env:
           MESSAGE: |
-            ${{ steps.test.outputs }}
+            ${{ steps.test.outputs.test }}
         with:
           script: |
             github.issues.createComment({
