fix:コメントを複数行にする

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Command
         id: test
         run: | 
-          echo "AAAAAAAAAAAAAAAAAAAAA"
+          ls -la
       
       - name: Comment
         uses: actions/github-script@v3
         env:
           MESSAGE: |
-            ${{ steps.test.output }}
+            ${{ steps.test.outputs }}
         with:
           script: |
             github.issues.createComment({
